MKDIR handler written not working though
